Bug 1122553 - BroadcastChannel should keep FileImpl alive when sent to the PBackground actors, r=bent